# rustdoc-traits-bugs

./: Cargo.toml  test.bash
gimli/: Cargo.toml
gimli/src/: lib.rs
realcore/: Cargo.toml
realcore/src/: lib.rs
src/: lib.rs
unstabled/: Cargo.toml
unstabled/src/: lib.rs
