[package]
name = "realstd"
version = "0.1.0"
authors = ["Lzu Tao <taolzu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realcore = { version = "0.1", path = "./realcore" }
gimli = { version = "0.1", path = "./gimli" }
